fix some wrapping issues on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -56,7 +56,7 @@
 
   .btn {
     @apply bg-blue-500 hover:bg-blue-700
-      no-underline text-white hover:text-white
+      no-underline text-white hover:text-white  text-nowrap
       py-2 px-4 rounded;
   }
 }
